--- a/src/vista/VentanaConcesionario.ui
+++ b/src/vista/VentanaConcesionario.ui
@@ -36,7 +36,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="aniadirTr">
+   <widget class="QPushButton" name="aniadirCon">
     <property name="geometry">
      <rect>
       <x>40</x>
@@ -49,7 +49,7 @@
      <string>Añadir concesionario</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="eliminarTr">
+   <widget class="QPushButton" name="eliminarCon">
     <property name="geometry">
      <rect>
       <x>230</x>
@@ -91,7 +91,7 @@ background-repeat: none;
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="eliminarTr_2">
+   <widget class="QPushButton" name="ModificarCon">
     <property name="geometry">
      <rect>
       <x>420</x>
@@ -104,7 +104,7 @@ background-repeat: none;
      <string>Modificar concesionario</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="eliminarTr_3">
+   <widget class="QPushButton" name="BuscarCon">
     <property name="geometry">
      <rect>
       <x>620</x>
@@ -117,11 +117,14 @@ background-repeat: none;
      <string>Buscar concesionario</string>
     </property>
    </widget>
-   <widget class="QFrame" name="frame">
+   <widget class="QFrame" name="frameAniaidir">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>460</x>
-      <y>50</y>
+      <y>30</y>
       <width>301</width>
       <height>541</height>
      </rect>
@@ -198,7 +201,7 @@ padding: 5px; /* Opcional: ajusta el espaciado interior */
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>190</y>
+       <y>180</y>
        <width>220</width>
        <height>31</height>
       </rect>
@@ -253,14 +256,14 @@ color: white;</string>
       </rect>
      </property>
      <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;Dni o contraseña incorrectos. Vuelve a intentarlo&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="LineaContra_2">
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>310</y>
+       <y>290</y>
        <width>220</width>
        <height>31</height>
       </rect>
@@ -282,7 +285,7 @@ padding: 5px; /* Opcional: ajusta el espaciado interior */
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>240</y>
+       <y>230</y>
        <width>220</width>
        <height>50</height>
       </rect>
@@ -300,7 +303,7 @@ padding: 5px; /* Opcional: ajusta el espaciado interior */
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>420</y>
+       <y>400</y>
        <width>220</width>
        <height>31</height>
       </rect>
@@ -322,7 +325,7 @@ padding: 5px; /* Opcional: ajusta el espaciado interior */
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>350</y>
+       <y>340</y>
        <width>241</width>
        <height>50</height>
       </rect>
